fix: template scroll and breadcrumb spacing

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -10,5 +10,5 @@
 // );
 
 .vh-100 {
-  height: 100vh;
+  min-height: 100vh;
 }
